--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,11 +5,12 @@
 
 .font-title {
     font-family: 'Montserrat', serif;
-    font-size: 2.75rem;
-    line-height: 2.75rem;
+    font-size: 2.25rem;
+    line-height: 2.25rem;
 
-    font-style: italic;
-    font-weight: 700;
+    font-style: normal;
+    font-weight: bold !important;
+    white-space: nowrap;
 }
 
 .font-big {
@@ -41,14 +42,10 @@ html,
 body {
     position: relative;
     width: 100%;
-    height: 100%;
-}
-
-body {
+    height: 100vh;
     margin: 0;
     padding: 0;
-    position: relative;
-    overflow: auto;
+    background: var(--color-bg);
 }
 
 .flex {
